# rust-sudoku-solver

./: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
lib/: Cargo.toml  build.sh  debug.sh
lib/src/: cell.rs  cell_collection.rs  lib.rs  sudoku.rs
public/: compatibility.js  index.html
public/wasm/: bettersudoku.js  bettersudoku_bg.wasm  bettersudoku_bg.wasm.d.ts  package.json
src/: App.css  App.tsx  bettersudoku.d.ts  index.css  index.tsx
src/classes/: Cell.ts  Solver.ts
src/components/: Nav.tsx  Sudoku.tsx  Uitleg.tsx
src/utils/: wasmSolve.ts
