[package]
name = "bettersudoku"
version = "0.1.0"
authors = ["Jorik <vanveenjorik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"